Closed
Bug 92864
Opened 23 years ago
Closed 23 years ago
Truncated window title with accented chars
Categories
(MailNews Core :: Internationalization, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.6
People
(Reporter: marina, Assigned: nhottanscp)
Details
(Keywords: intl)
Attachments
(1 file)
679 bytes,
patch
|
ftang
:
review+
|
Details | Diff | Splinter Review |
I am seeing this on JA system when displaying a message, same message displayed on WinNT JA doesn't have this problem: chars have no accents but they are not truncated Steps to reproduce: - log into to the account; - select a message with accented chars , say "umlaut"jet"; - now notew: the window title displays only "s" the part that starts with accented chars is truncated. If the message header starts with accented chars it won't be displayed at all. Again on WinNT JA the caption doesn't show any accents though it doesn't truncate the string
Comment 1•23 years ago
|
||
marna: Is this Mail/News specific? cc'ing nhotta, ftang.
It is specific Mac issue but not limited to Mail/News. You can see the same happening in the browser window when going to any page from netscape.fr that has accented chars in the link. The window title would display truncated
Updated•23 years ago
|
Status: NEW → ASSIGNED
Updated•23 years ago
|
Priority: -- → P3
Comment 6•23 years ago
|
||
give to nhotta, I believe now this is MacOS 9 only, right ? I think the problem is in widget/src/mac/nsMacControl.cpp 406 void nsMacControl::StringToStr255(const nsString& aText, Str255& aStr255) Call mUnicodeEncoder->->SetOutputErrorBehavior(nsIUnicodeEncoder::kOnError_Replace, nsnull, (PRUnichar)'?'); probably will fix this problem.
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Assignee | ||
Comment 8•23 years ago
|
||
Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Comment 9•23 years ago
|
||
Comment on attachment 52833 [details] [diff] [review] Patch, added nsIUnicodeEncoder::SetOutputErrorBehavior to avoid the truncation. r=ftang
Attachment #52833 -
Flags: review+
Assignee | ||
Comment 11•23 years ago
|
||
Checked in to the trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 12•23 years ago
|
||
verified with 2001-11-01 trunk build, the window title is not truncated anymore neither in mail nor in browser
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: MailNews → Core
Updated•16 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•