Added nsIUnicodeEncoder::SetOutputErrorBehavior to avoid the truncation of charse conversion, bug 92864, r=ftang, sr=sfraser.